unpackaged/main/default/objects/Activity/fields/Activity_18_Digit_ID__c.field-meta.xml
<CustomField>
    <fullName>Activity_18_Digit_ID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Activity 18 Digit ID</label>
    <type>Text</type>
</CustomField>