unpackaged/main/default/objects/Activity/fields/Additional_Feedback_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Additional_Feedback_End_Date__c</fullName>
    <label>Additional Feedback End Date</label>
    <type>DateTime</type>
</CustomField>