unpackaged/main/default/objects/Activity/fields/Additional_Feedback_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Additional_Feedback_Start_Date__c</fullName>
    <label>Additional Feedback Start Date</label>
    <type>DateTime</type>
</CustomField>