unpackaged/main/default/objects/Activity/fields/Additional_Revisions_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Additional_Revisions_Start_Date__c</fullName>
    <label>Additional Revisions Start Date</label>
    <type>DateTime</type>
</CustomField>