unpackaged/main/default/objects/Activity/fields/Assigned_Analytics_QA__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Analytics_QA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned Analytics QA</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>