unpackaged/main/default/objects/Activity/fields/Assigned_POD__c.field-meta.xml
<CustomField>
    <fullName>Assigned_POD__c</fullName>
    <formula>TEXT( Owner:User.Website_execution_pod__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assigned Website Execution POD</label>
    <type>Text</type>
</CustomField>