unpackaged/main/default/objects/Activity/fields/Assigned_Position__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Position__c</fullName>
    <formula>TEXT( Owner:User.Contact.Position__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assigned Position</label>
    <type>Text</type>
</CustomField>