unpackaged/main/default/objects/Activity/fields/Assigned_Revision_POD__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Revision_POD__c</fullName>
    <formula>TEXT(  Owner:User.Revisions_Pod__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assigned Revision POD</label>
    <type>Text</type>
</CustomField>