unpackaged/main/default/objects/Activity/fields/Assigned_Team__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Team__c</fullName>
    <formula>TEXT(Owner:User.Contact.Team__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assigned Team</label>
    <type>Text</type>
</CustomField>