unpackaged/main/default/objects/Activity/fields/At_Risk_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>At_Risk_Start_Date__c</fullName>
    <label>At Risk Start Date</label>
    <type>DateTime</type>
</CustomField>