unpackaged/main/default/objects/Activity/fields/Blocked_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Blocked_End_Date__c</fullName>
    <label>Blocked End Date</label>
    <type>DateTime</type>
</CustomField>