unpackaged/main/default/objects/Activity/fields/Blocked_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Blocked_Start_Date__c</fullName>
    <label>Blocked Start Date</label>
    <type>DateTime</type>
</CustomField>