unpackaged/main/default/objects/Activity/fields/Call_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>Call_Scheduled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Call Scheduled</label>
    <type>Checkbox</type>
</CustomField>