unpackaged/main/default/objects/Activity/fields/Client_Folder__c.field-meta.xml
<CustomField>
    <fullName>Client_Folder__c</fullName>
    <label>Client Folder</label>
    <length>200</length>
    <type>Text</type>
</CustomField>