unpackaged/main/default/objects/Activity/fields/Community_URL__c.field-meta.xml
<CustomField>
    <fullName>Community_URL__c</fullName>
    <formula>&quot;https://luxurypresence.force.com/s/service/&quot;&amp; Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Community URL</label>
    <type>Text</type>
</CustomField>