unpackaged/main/default/objects/Activity/fields/Completed_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Completed_End_Date__c</fullName>
    <label>Completed End Date</label>
    <type>DateTime</type>
</CustomField>