unpackaged/main/default/objects/Activity/fields/Completed_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Completed_Start_Date__c</fullName>
    <label>Completed Start Date</label>
    <type>DateTime</type>
</CustomField>