unpackaged/main/default/objects/Activity/fields/Created_time__c.field-meta.xml
<CustomField>
    <fullName>Created_time__c</fullName>
    <formula>LEFT (RIGHT (TEXT ( CreatedDate  - (7/24)), 9), 5)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created time</label>
    <type>Text</type>
</CustomField>