unpackaged/main/default/objects/Activity/fields/CRM_Integrated__c.field-meta.xml
<CustomField>
    <fullName>CRM_Integrated__c</fullName>
    <label>CRM Integrated</label>
    <length>100</length>
    <type>Text</type>
</CustomField>