unpackaged/main/default/objects/Activity/fields/Done_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Done_Start_Date__c</fullName>
    <label>Done Start Date</label>
    <type>DateTime</type>
</CustomField>