unpackaged/main/default/objects/Activity/fields/In_Progress_End_Date__c.field-meta.xml
<CustomField>
    <fullName>In_Progress_End_Date__c</fullName>
    <label>In Progress End Date</label>
    <type>DateTime</type>
</CustomField>