unpackaged/main/default/objects/Activity/fields/New_end_date__c.field-meta.xml
<CustomField>
    <fullName>New_end_date__c</fullName>
    <label>New end date</label>
    <type>DateTime</type>
</CustomField>