unpackaged/main/default/objects/Activity/fields/New_start_date__c.field-meta.xml
<CustomField>
    <fullName>New_start_date__c</fullName>
    <label>New start date</label>
    <type>DateTime</type>
</CustomField>