unpackaged/main/default/objects/Activity/fields/Not_Started_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Not_Started_End_Date__c</fullName>
    <label>Not Started End Date</label>
    <type>DateTime</type>
</CustomField>