unpackaged/main/default/objects/Activity/fields/Not_Started_start_date__c.field-meta.xml
<CustomField>
    <fullName>Not_Started_start_date__c</fullName>
    <label>Not Started start date</label>
    <type>DateTime</type>
</CustomField>