unpackaged/main/default/objects/Activity/fields/Open_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Open_End_Date__c</fullName>
    <label>Open End Date</label>
    <type>DateTime</type>
</CustomField>