unpackaged/main/default/objects/Activity/fields/Open_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Open_Start_Date__c</fullName>
    <label>Open Start Date</label>
    <type>DateTime</type>
</CustomField>