unpackaged/main/default/objects/Activity/fields/Paused_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Paused_End_Date__c</fullName>
    <label>Paused End Date</label>
    <type>DateTime</type>
</CustomField>