unpackaged/main/default/objects/Activity/fields/Paused_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Paused_Start_Date__c</fullName>
    <label>Paused Start Date</label>
    <type>DateTime</type>
</CustomField>