unpackaged/main/default/objects/Activity/fields/Pixel_Implemented__c.field-meta.xml
<CustomField>
    <fullName>Pixel_Implemented__c</fullName>
    <label>Pixel Implemented</label>
    <length>100</length>
    <type>Text</type>
</CustomField>