unpackaged/main/default/objects/Activity/fields/QA_In_Progress_End_Date__c.field-meta.xml
<CustomField>
    <fullName>QA_In_Progress_End_Date__c</fullName>
    <label>QA In Progress End Date</label>
    <type>DateTime</type>
</CustomField>