unpackaged/main/default/objects/Activity/fields/Ready_for_QA_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Ready_for_QA_End_Date__c</fullName>
    <label>Ready for QA End Date</label>
    <type>DateTime</type>
</CustomField>