unpackaged/main/default/objects/Activity/fields/Ready_for_QA_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Ready_for_QA_Start_Date__c</fullName>
    <label>Ready for QA Start Date</label>
    <type>DateTime</type>
</CustomField>