unpackaged/main/default/objects/Activity/fields/Reason_blocked__c.field-meta.xml
<CustomField>
    <fullName>Reason_blocked__c</fullName>
    <label>Reason blocked</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Waiting for DS</fullName>
            </value>
            <value>
                <fullName>Waiting on WB</fullName>
            </value>
            <value>
                <fullName>Waiting on Logo</fullName>
            </value>
            <value>
                <fullName>Waiting on IM</fullName>
            </value>
            <value>
                <fullName>Waiting on Sales</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Waiting for HIC</fullName>
                <isActive>false</isActive>
                <label>Waiting for HIC</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>