unpackaged/main/default/objects/Activity/fields/Reminder_date__c.field-meta.xml
<CustomField>
    <fullName>Reminder_date__c</fullName>
    <label>Reminder date</label>
    <type>Date</type>
</CustomField>