unpackaged/main/default/objects/Activity/fields/Revisions_in_Progress_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Revisions_in_Progress_Start_Date__c</fullName>
    <label>Revisions in Progress Start Date</label>
    <type>DateTime</type>
</CustomField>