unpackaged/main/default/objects/Activity/fields/Sent_for_Approval_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Sent_for_Approval_End_Date__c</fullName>
    <label>Sent for Approval End Date</label>
    <type>DateTime</type>
</CustomField>