unpackaged/main/default/objects/Activity/fields/Sent_for_Approval_Turnaround_Time__c.field-meta.xml
<CustomField>
    <fullName>Sent_for_Approval_Turnaround_Time__c</fullName>
    <formula>IF((
(
ROUND( 8 * (
( 5 * FLOOR( ( DATEVALUE( Sent_for_Approval_End_Date__c ) - DATE( 1900, 1, 8) ) / 7) +
MIN(5,
MOD( DATEVALUE( Sent_for_Approval_End_Date__c) - DATE( 1900, 1, 8), 7) +
MIN( 1, 24 / 8 * ( MOD(Sent_for_Approval_End_Date__c - DATETIMEVALUE( &#39;1900-01-08 16:00:00&#39; ), 1 ) ) )
)
)
-
( 5 * FLOOR( ( DATEVALUE( Sent_for_Approval_Start_Date__c ) - DATE( 1900, 1, 8) ) / 7) +
MIN( 5,
MOD( DATEVALUE( Sent_for_Approval_Start_Date__c ) - DATE( 1996, 1, 1), 7 ) +
MIN( 1, 24 / 8 * ( MOD( Sent_for_Approval_Start_Date__c - DATETIMEVALUE( &#39;1900-01-08 16:00:00&#39; ), 1) ) )
)
)
),
0 )
)/8)&gt;0,

(
ROUND( 8 * (
( 5 * FLOOR( ( DATEVALUE( Sent_for_Approval_End_Date__c ) - DATE( 1900, 1, 8) ) / 7) +
MIN(5,
MOD( DATEVALUE( Sent_for_Approval_End_Date__c) - DATE( 1900, 1, 8), 7) +
MIN( 1, 24 / 8 * ( MOD(Sent_for_Approval_End_Date__c - DATETIMEVALUE( &#39;1900-01-08 16:00:00&#39; ), 1 ) ) )
)
)
-
( 5 * FLOOR( ( DATEVALUE( Sent_for_Approval_Start_Date__c ) - DATE( 1900, 1, 8) ) / 7) +
MIN( 5,
MOD( DATEVALUE( Sent_for_Approval_Start_Date__c ) - DATE( 1996, 1, 1), 7 ) +
MIN( 1, 24 / 8 * ( MOD( Sent_for_Approval_Start_Date__c - DATETIMEVALUE( &#39;1900-01-08 16:00:00&#39; ), 1) ) )
)
)
),
0 )
)/8,

0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sent for Approval Turnaround Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>