unpackaged/main/default/objects/Activity/fields/SFA_Revisions_End_Date__c.field-meta.xml
<CustomField>
    <fullName>SFA_Revisions_End_Date__c</fullName>
    <label>SFA Revisions End Date</label>
    <type>DateTime</type>
</CustomField>