unpackaged/main/default/objects/Activity/fields/SFA_Revisions_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>SFA_Revisions_Start_Date__c</fullName>
    <label>SFA Revisions Start Date</label>
    <type>DateTime</type>
</CustomField>