unpackaged/main/default/objects/Activity/fields/Staging_Link__c.field-meta.xml
<CustomField>
    <fullName>Staging_Link__c</fullName>
    <label>Staging Link</label>
    <length>200</length>
    <type>Text</type>
</CustomField>